// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsOrAccordionSection Accordion default to name if title is null 1`] = `
<div>
  <div
    class="Section-root Section-white css-10chrh8"
    data-testid="tabs-or-accordion-section-string"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class=" css-makape"
            data-testid="accordion"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1dvnk40-MuiPaper-root-MuiAccordion-root"
              data-testid="accordion-item"
            >
              <div
                aria-expanded="false"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot MuiAccordionSummary-gutters css-1bwzdu4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{"id":"selector-accordion1","label":"name","action":"Selector – Accordion"}"
                data-testid="accordion-summary"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h6  css-1nuwz6u-MuiTypography-root"
                    data-testid="typography"
                  >
                    name
                  </h3>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root  css-188s0du-MuiAccordionDetails-root"
                      >
                        <div
                          class="RichText-root RichText-no-bottom-margin css-1u73y0t"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
                            data-testid="typography"
                          >
                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection Accordion renders Correctly  1`] = `
<div>
  <div
    class="Section-root Section-white css-10chrh8"
    data-testid="tabs-or-accordion-section-string"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class=" css-makape"
            data-testid="accordion"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1dvnk40-MuiPaper-root-MuiAccordion-root"
              data-testid="accordion-item"
            >
              <div
                aria-expanded="false"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot MuiAccordionSummary-gutters css-1bwzdu4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{"id":"selector-accordion1","label":"hello","action":"Selector – Accordion"}"
                data-testid="accordion-summary"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h6  css-1nuwz6u-MuiTypography-root"
                    data-testid="typography"
                  >
                    hello
                  </h3>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root  css-188s0du-MuiAccordionDetails-root"
                      >
                        <div
                          class="RichText-root RichText-no-bottom-margin css-1u73y0t"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
                            data-testid="typography"
                          >
                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection Tabs default to name if title is null 1`] = `
<div>
  <div
    class="Section-root Section-pearl css-10chrh8"
    data-testid="tabs-or-accordion-section-string"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class=" css-iid5p5"
            data-testid="tabs"
          >
            <div>
              <div
                class="Tabs-tabsBar"
              >
                <div
                  class=" css-ze8cyt"
                >
                  <div
                    class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
                  >
                    <div
                      class="MuiTabs-root css-1e0aii6-MuiTabs-root"
                    >
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowLeftIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                      <div
                        class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                      />
                      <div
                        class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                        style="margin-bottom: 0px;"
                      >
                        <div
                          aria-label="tabs"
                          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                          role="tablist"
                        >
                          <button
                            aria-controls="tabpanel-name"
                            aria-selected="true"
                            class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                            data-gtm="{"id":"selector-tabs2","label":"name","action":"Selector – Tabs"}"
                            data-testid="tab-name"
                            id="tab-name"
                            role="tab"
                            tabindex="0"
                            type="button"
                          >
                            name
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <span
                          class="MuiTabs-indicator Tabs-tabIndicator css-tv859c-MuiTabs-indicator"
                          style="left: 0px; width: 0px;"
                        />
                      </div>
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowRightIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-16sd96l-MuiDivider-root"
              />
            </div>
            <div
              aria-labelledby="tab-name"
              class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
              data-testid="tabpanel-name"
              heading="name"
              id="tabpanel-name"
              role="tabpanel"
            >
              <div
                class="RichText-root css-1u73y0t"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
                  data-testid="typography"
                >
                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection Tabs renders Correctly  1`] = `
<div>
  <div
    class="Section-root Section-pearl css-10chrh8"
    data-testid="tabs-or-accordion-section-string"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class=" css-iid5p5"
            data-testid="tabs"
          >
            <div>
              <div
                class="Tabs-tabsBar"
              >
                <div
                  class=" css-ze8cyt"
                >
                  <div
                    class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
                  >
                    <div
                      class="MuiTabs-root css-1e0aii6-MuiTabs-root"
                    >
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowLeftIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                      <div
                        class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                      />
                      <div
                        class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                        style="margin-bottom: 0px;"
                      >
                        <div
                          aria-label="tabs"
                          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                          role="tablist"
                        >
                          <button
                            aria-controls="tabpanel-hello"
                            aria-selected="true"
                            class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                            data-gtm="{"id":"selector-tabs2","label":"hello","action":"Selector – Tabs"}"
                            data-testid="tab-hello"
                            id="tab-hello"
                            role="tab"
                            tabindex="0"
                            type="button"
                          >
                            hello
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <span
                          class="MuiTabs-indicator Tabs-tabIndicator css-tv859c-MuiTabs-indicator"
                          style="left: 0px; width: 0px;"
                        />
                      </div>
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowRightIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-16sd96l-MuiDivider-root"
              />
            </div>
            <div
              aria-labelledby="tab-hello"
              class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
              data-testid="tabpanel-hello"
              heading="hello"
              id="tabpanel-hello"
              role="tabpanel"
            >
              <div
                class="RichText-root css-1u73y0t"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
                  data-testid="typography"
                >
                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection not render tab panel if item array is empty 1`] = `
<div>
  <div
    class="Section-root Section-pearl css-10chrh8"
    data-testid="tabs-or-accordion-section-string"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class=" css-iid5p5"
            data-testid="tabs"
          >
            <div>
              <div
                class="Tabs-tabsBar"
              >
                <div
                  class=" css-ze8cyt"
                >
                  <div
                    class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
                  >
                    <div
                      class="MuiTabs-root css-1e0aii6-MuiTabs-root"
                    >
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowLeftIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                      <div
                        class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                      />
                      <div
                        class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                        style="margin-bottom: 0px;"
                      >
                        <div
                          aria-label="tabs"
                          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                          role="tablist"
                        />
                        <span
                          class="MuiTabs-indicator Tabs-tabIndicator css-tv859c-MuiTabs-indicator"
                          style="left: 0px; width: 0px;"
                        />
                      </div>
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowRightIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-16sd96l-MuiDivider-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection title attribute is rendered if both name and title exists for tab panels 1`] = `
<div>
  <div
    class="Section-root Section-pearl css-10chrh8"
    data-testid="tabs-or-accordion-section-string"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class=" css-iid5p5"
            data-testid="tabs"
          >
            <div>
              <div
                class="Tabs-tabsBar"
              >
                <div
                  class=" css-ze8cyt"
                >
                  <div
                    class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
                  >
                    <div
                      class="MuiTabs-root css-1e0aii6-MuiTabs-root"
                    >
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowLeftIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                      <div
                        class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                      />
                      <div
                        class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                        style="margin-bottom: 0px;"
                      >
                        <div
                          aria-label="tabs"
                          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                          role="tablist"
                        >
                          <button
                            aria-controls="tabpanel-title"
                            aria-selected="true"
                            class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                            data-gtm="{"id":"selector-tabs2","label":"title","action":"Selector – Tabs"}"
                            data-testid="tab-title"
                            id="tab-title"
                            role="tab"
                            tabindex="0"
                            type="button"
                          >
                            title
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <span
                          class="MuiTabs-indicator Tabs-tabIndicator css-tv859c-MuiTabs-indicator"
                          style="left: 0px; width: 0px;"
                        />
                      </div>
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowRightIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-16sd96l-MuiDivider-root"
              />
            </div>
            <div
              aria-labelledby="tab-title"
              class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
              data-testid="tabpanel-title"
              heading="title"
              id="tabpanel-title"
              role="tabpanel"
            >
              <div
                class="RichText-root css-1u73y0t"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
                  data-testid="typography"
                >
                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
